# AMD-Incstinct-Labs

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
benchmarks/: README.md
cdna3-prims/: README.md
cdna3-prims/docs/: composition.md
cdna3-prims/examples/: async_tiled_gemm.hpp  fused_softmax.hpp
cdna3-prims/include/cdna3/: attention.hpp  cdna3.hpp  dme.hpp  mfma.hpp  wave.hpp
cdna3-prims/include/cdna3/detail/: fa_decode_dme_kernel.hpp  fa_decode_kernel.hpp  fa_prefill_kernel.hpp
cdna3-prims/include/cdna3/runtime/: forward.hpp  model_loader.hpp  rocblas_gemm.hpp  session.hpp
cdna3-prims/runtime/: design.md  export_model.py  kv_cache.hpp  make_reference.py  model_loader.hpp
cdna3-prims/tests/: bench_generate.hip  compile_smoke.hip  diag_logits.hip  validate_attention_api.hip  validate_decode_dme.hip  validate_runtime.hip
docs/: framework-vision.md  gap-analysis.md  hipcub-dpp-issue.md  paper-draft.md  research-outline.md
research/: run_all_validation.sh
research/dme-abstraction/: CMakeLists.txt  README.md
research/dme-abstraction/include/dme/: dme_copy.hpp  tensor_prefetch.hpp
research/dme-abstraction/tests/: bench_dme.hip  bench_dme_async.hip  probe_dme.hip
research/flash-attention-mi300x/: CMakeLists.txt  DESIGN_decode_kvcache.md  DESIGN_gemm_batch1_occupancy.md  DESIGN_multiwave_fa.md  DESIGN_phase1_multiwave_gap.md  NOTE_flat_context_baseline.md  PRE_REGISTRATION_S5_COST_CONTRAST.md  README.md  bench_gemm_batch1_vs_batched.hip  bench_multiwave_vs_sdpa.hip  bench_sdpa_baseline.py  fa_bc_sweep.hip  fa_decode.hip  fa_dme.hip  fa_dpp.hip  fa_mfma.hip  fa_mfma2.hip  fa_mfma_dsweep.hip  fa_multiwave.hip  fa_naive.hip  fa_robust.hip  s5_cost_contrast.py
research/flash-attention-mi300x/docs/: design.md
research/flash-attention-mi300x/kernels/: fa_dpp.hip  fa_naive.hip
research/flash-attention-mi300x/llm_integration/: export_attn_layer.py  fa_attn_kernel.hpp  fa_decode_kernel.hpp  validate_attn_layer.hip
research/flash-attention-mi300x/llm_integration/torch_op/: compare_vs_production_fa.py  fa_decode_op.hip  fa_torch_op.hip  setup.py  setup_decode.py  validate_decode.py  validate_full_model.py
research/flash-attention-mi300x/results/: 2026-06-05_fa_steps_mi300x.txt  2026-06-05_g1_mfma_dsweep_mi300x.txt  2026-06-08_R1_baseline_and_2B_llm_mi300x.txt  2026-06-10_2A_2C_llm_integration_mi300x.txt  2026-06-10_S5_cost_contrast_mi300x.txt  2026-06-15_bench_generate_c7c8_mi300x.txt  2026-06-15_bench_generate_mi300x.txt  2026-06-15_fa_decode_mi300x.txt  2026-06-15_fa_multiwave_mi300x.txt  2026-06-15_stageB_api_mi300x.txt  2026-06-15_stageC_diag_mi300x.txt  2026-06-15_stageC_runtime_mi300x.txt
research/flash-attention-mi300x/scripts/: run_fa_dpp.sh  run_fa_naive.sh
research/flash-attention-mi300x/tests/: probe_mfma_mapping.hip
research/infinity-fabric-allreduce/: CMakeLists.txt  README.md
research/infinity-fabric-allreduce/docs/: design.md
research/infinity-fabric-allreduce/tests/: probe_xgmi_topology.hip
research/mlir-mfma-tiling/: CMakeLists.txt  README.md
research/wave-primitives/: CMakeLists.txt  README.md
research/wave-primitives/benchmarks/: bench_all_types.hip  bench_bf16acc.hip  bench_block_reduce.hip  bench_common.hpp  bench_h3_fp16acc.hip  bench_layernorm.hip  bench_layernorm_welford.hip  bench_reduce.hip  bench_reduce_dpp.hip  bench_reduce_dpp_types.hip  bench_scan.hip  bench_scan_dpp.hip  bench_scan_dpp_types.hip  bench_softmax.hip
research/wave-primitives/include/wave_primitives/: wave_ballot.hpp  wave_primitives.hpp  wave_reduce.hpp  wave_reduce_dpp.hpp  wave_scan.hpp  wave_scan_dpp.hpp  wave_shuffle.hpp
research/wave-primitives/include/wave_primitives/detail/: config.hpp
research/wave-primitives/results/: 2026-06-03_dpp_reduce_mi300x.txt  2026-06-03_dpp_types_mi300x.txt  2026-06-03_rocprofv3_lds_mi300x.txt  2026-06-03_scan_dpp_mi300x.txt  2026-06-05_g2_bf16acc_mi300x.txt  2026-06-05_h3_h4_multitype_mi300x.txt
research/wave-primitives/scripts/: profile_rocprofv3.sh  run2_dpp_types.sh  run3_layernorm.sh  run3_softmax.sh  run_all.sh
research/wave-primitives/tests/: probe_bcast_map.hip  probe_dpp.hip  probe_dpp_bcast.hip  probe_fulldpp.hip  probe_scan_dpp.hip  probe_scan_fulldpp.hip  test_correctness.hip
